@@ -1,1 +1,7 @@
 # spring-demo
+
+```bash
+--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+```
+
+`Add dependencies with "provided" scope to classpath`
